--- a/sass/element/_form-adv-switch.scss
+++ b/sass/element/_form-adv-switch.scss
@@ -29,7 +29,7 @@
 			top:(($font-size-h4 - $font-size-h6) / -2);
 			left: 0;
 		width: $font-size-h4;
-		@include box-shadow(0 1px 3px rgba(0, 0, 0, 0.5));
+		@include box-shadow(0 1px 3px 1px rgba(0, 0, 0, 0.25));
 		@include transition(background-color 0.3s $timing, box-shadow 0.15s $timing, left 0.3s $timing);
 	}
 	input[type="checkbox"]:checked + &,
@@ -49,13 +49,13 @@
 	}
 	.no-touch & {
 		&:active:after {
-			@include box-shadow(0 1px 3px rgba(0, 0, 0, 0.5), 0 0 0 (($font-size * 5 - $font-size-h4) / 4) rgba(0, 0, 0, 0.1));
+			@include box-shadow(0 1px 3px 1px rgba(0, 0, 0, 0.25), 0 0 0 (($font-size * 5 - $font-size-h4) / 4) rgba(0, 0, 0, 0.1));
 		}
 	}
 	.no-touch input[type="checkbox"]:checked + &,
 	.no-touch input[type="radio"]:checked + & {
 		&:active:after {
-			@include box-shadow(0 1px 3px rgba(0, 0, 0, 0.5), 0 0 0 (($font-size * 5 - $font-size-h4) / 4) rgba(red($brand-color), green($brand-color), blue($brand-color), 0.25));
+			@include box-shadow(0 1px 3px 1px rgba(0, 0, 0, 0.25), 0 0 0 (($font-size * 5 - $font-size-h4) / 4) rgba(red($brand-color), green($brand-color), blue($brand-color), 0.25));
 		}
 	}
 	.touch & {
@@ -64,13 +64,13 @@
 			@include transition(background-color 0.3s $timing 0.15s, box-shadow 0.15s $timing, left 0.3s $timing 0.15s);
 		}
 		&.switch-toggle-on:after {
-			@include box-shadow(0 1px 3px rgba(0, 0, 0, 0.5), 0 0 0 (($font-size * 5 - $font-size-h4) / 4) rgba(red($brand-color), green($brand-color), blue($brand-color), 0.25));
+			@include box-shadow(0 1px 3px 1px rgba(0, 0, 0, 0.25), 0 0 0 (($font-size * 5 - $font-size-h4) / 4) rgba(red($brand-color), green($brand-color), blue($brand-color), 0.25));
 		}
 	}
 	.touch input[type="checkbox"]:checked + &,
 	.touch input[type="radio"]:checked + & {
 		&.switch-toggle-on:after {
-			@include box-shadow(0 1px 3px rgba(0, 0, 0, 0.5), 0 0 0 (($font-size * 5 - $font-size-h4) / 4) rgba(0, 0, 0, 0.1));
+			@include box-shadow(0 1px 3px 1px rgba(0, 0, 0, 0.25), 0 0 0 (($font-size * 5 - $font-size-h4) / 4) rgba(0, 0, 0, 0.1));
 		}
 	}
 }
