--- a/sass/element/_tile.scss
+++ b/sass/element/_tile.scss
@@ -2,7 +2,7 @@
 	background-color: $white;
 	display: block;
 	position: relative;
-	@include box-shadow(0 0 1px rgba(0, 0, 0, 0.5));
+	@include box-shadow(0 0 1px 1px rgba(0, 0, 0, 0.15));
 	@include clearfix();
 	&[href] {
 		color: $black-text;
