--- a/sass/theme/_content.scss
+++ b/sass/theme/_content.scss
@@ -25,11 +25,6 @@
 	}
 }
 
-.content-nav {
-	background-color: $white;
-	@include box-shadow(0 0 1px rgba(0, 0, 0, 0.5));
-}
-
 .content-sub-heading {
 	color: $brand-color;
 	font-size: $font-size-h4;
